--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.view.prefix=/WEB-INF/jsp/
 spring.view.suffix=.jsp
 
 server.port=9090
+
+file.uploadFolder=e://PKU/apache-tomcat-7.0.90/webapps/file
